--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@hapi/boom": "^10.0.1",
     "chalk": "^5.3.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "joi": "^17.12.0"
   }
 }
