--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@faker-js/faker": "^8.3.1",
     "@hapi/boom": "^10.0.1",
     "chalk": "^5.3.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "joi": "^17.12.0"
   }
