--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,linux,windows
 pnpm-lock.yaml
+postgres_data
+versel.json
