--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@hapi/boom": "^10.0.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "joi": "^17.12.0"
+    "joi": "^17.12.0",
+    "mysql2": "^3.9.0"
   }
 }
