--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch api/index.mjs",
-    "start": "node api/index.mjs",
+    "dev": "node --watch api/index.js",
+    "start": "node api/index.js",
     "lint": "eslint"
   },
   "keywords": [],
