--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch api/index.js",
-    "start": "node api/index.js",
+    "start": "node api/index.js && sequelize-cli db:migrate",
     "lint": "eslint",
     "make:migration": "sequelize-cli migration:generate --name",
     "migrate" : "sequelize-cli db:migrate",
