--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-prettier": "0.0.0-empty",
-    "prettier": "^3.2.4",
-    "@faker-js/faker": "^8.3.1"
+    "prettier": "^3.2.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@hapi/boom": "^10.0.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
@@ -31,7 +31,6 @@
     "express": "^4.18.2",
     "joi": "^17.12.0",
     "mysql2": "^3.9.0",
-    "sequelize": "^6.35.2",
-    "sequelize-cli": "^6.6.2"
+    "sequelize": "^6.35.2"
   }
 }
