--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start-prod": "sequelize-cli db:migrate && node api/index.js",
     "lint": "eslint",
     "make:migration": "sequelize-cli migration:generate --name",
-    "migrate" : "sequelize-cli db:migrate",
-    "migrate:rollback" : "sequelize-cli db:migrate:undo"
+    "migrate": "sequelize-cli db:migrate",
+    "migrate:rollback": "sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +20,8 @@
     "eslint": "^8.56.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-prettier": "0.0.0-empty",
-    "prettier": "^3.2.4"
+    "prettier": "^3.2.4",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
