--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.3.1",
     "@hapi/boom": "^10.0.1",
+    "bcrypt": "^5.1.1",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
