--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.35.2"
   }
 }
